Navbar(under text seen bug) and Footer(center align for smaller screens)

--- a/components/Layout/Footer/style.module.css
+++ b/components/Layout/Footer/style.module.css
@@ -61,14 +61,18 @@
   text-align: center;
 }
 
-@media (max-width: 802px) {
+@media (max-width: 768px) {
   .footerSection {
     flex-direction: column;
     align-items: center; /* will be changed after we add quick links and form*/
   }
-
   .footerJoinUs {
     text-align: left;
+  }
+  .footerLogo ,.footerLogoText{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
